# apt-dater

./: .gitignore  .gitmodules  .travis.features  .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.autoref  README.clusters  README.coopref  README.history  README.hooks  README.md  README.tagging  README.tclfilter  README.ttymux  README.xmlreport  RELTEST  SCREENSHOTS.md  TODO  aclocal.m4  apt-dater.c  apt-dater.h  colors.c  colors.h  config.h.in  configure  configure.ac  configure.in  exec.c  exec.h  extern.h  kernelinfo.sh  keyfiles.c  keyfiles.h  lock.c  (+11 more)
clients/: Makefile.am  Makefile.in  README  README-0.2  README-0.3  README-0.4  README-0.5  README.sshkey
clients/debian/: Makefile  README.Etch  apt-dater-host  apt-dater-host.conf
clients/debian-python/: apt-dater-host  apt-dater-host.conf
clients/debian/debian/: changelog  control  copyright  rules
clients/debian/lib/: apt-dater-host.sh  kernelinfo.sh
clients/python/: apt-dater-host
clients/rpm/: apt-dater-host
clients/rug/: apt-dater-host  apt-dater-host.conf
clients/win/: README.wua  apt-dater-host.cmd  cscript-apt-dater-host.vbs
clients/wua/: README.wua  cscript-apt-dater-host.vbs
clients/yum/: apt-dater-host  apt-dater-host.conf
clients/zypper/: apt-dater-host  apt-dater-host.conf
conf/: Makefile.am  Makefile.in  apt-dater.conf.example  apt-dater.config  apt-dater.xml  apt-dater.xml.in  apt-dater.xml.inc  convert-configs.pl  hosts.conf.example  hosts.config  hosts.xml  hosts.xml.in  hosts.xml.inc  screenrc  screenrc.example  screenrc.inc  tmux.conf  tmux.conf.inc
debian/: apt-dater-host.conffiles  apt-dater.docs  changelog  control  copyright  menu  rules
etc/: Makefile.am  Makefile.in  apt-dater.xml  apt-dater.xml.in  hosts.xml  hosts.xml.in
images/: apt-dater.xpm
include/: adproto.h
lib/: Makefile.am  Makefile.in  adsh  cmd  hosts2xml.in  pcre-less  script  ssh-addonce  tmux-bind-q-kill-pane  tmux-hint
m4/: ChangeLog
man/: Makefile.am  Makefile.in  apt-dater-host.1  apt-dater.8  apt-dater.conf.5  apt-dater.conf.html  apt-dater.conf.xml  apt-dater.config.5  apt-dater.config.html  apt-dater.config.xml  apt-dater.html  apt-dater.xml  apt-dater.xml.5  apt-dater.xml.html  apt-dater.xml.xml
po/: .gitignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  apt-dater.pot  de.po  it.po  pt.po
schema/: Makefile.am  Makefile.in  apt-dater.dtd  hosts.dtd  report.dtd
src/: Makefile  Makefile.am  Makefile.in  adproto.h  adsh.c  apt-dater.c  apt-dater.h  autoref.c  autoref.h  clusters.c  clusters.h  colors.c  colors.h  completion.c  completion.h  coopref.c  coopref.h  env.c  env.h  exec.c  exec.h  extern.h  glue.c  glue.h  history.c  history.h  keyfiles.c  keyfiles.h  lock.c  lock.h  main.c  parsecmd.c  parsecmd.h  report.c  report.h  runcust.c  runcust.h  screen.c  screen.h  sighandler.c  (+11 more)
test/: logtest-falsepositives.txt  logtest-notices.txt  logtest-regular.txt  test.sh
xmlreport/: extra-pkgs.xsl  overview.xsl  overview2csv.xsl  report.dtd
