#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(apt-dater, VERSION)
AM_INIT_AUTOMAKE([apt-dater], VERSION)
AC_CONFIG_SRCDIR([src/apt-dater.c])
AC_CONFIG_HEADER([config.h])

PACKAGE=apt-dater
VERSION=0.5.0

glib_module="glib-2.0 >= 2.3.6"
PKG_CHECK_MODULES(GLIB, "$glib_module", enable_glib_=yes, enable_glib_=no)

AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)
AC_PROG_INSTALL

# Some additional definitions
AC_DEFINE(HAVE_COLOR,1,[ Define if your curses library supports color. ])
AC_DEFINE(HAVE_USE_DEFAULT_COLORS,1,
	[ Define if your curses library supports function use_default_colors. ])
AC_DEFINE(HAVE_FLOCK,1,[ Define if funtion flock avaible. ])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([curses], [initscr])
AC_CHECK_LIB([popt], [poptParseArgvString])
AC_CHECK_LIB([glib-2.0], [g_main_loop_run])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/file.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_STRUCT_TM

# Check if `screen' install on your system
echo -n "checking for screen... "
if test -x /usr/bin/screen ; then
	AC_DEFINE(SCREEN_BINARY,"/usr/bin/screen",[ Where is the command screen located. ])
	echo "/usr/bin/screen"
elif test -x /usr/local/bin/screen; then
	AC_DEFINE(SCREEN_BINARY,"/usr/local/bin/screen",[ Where is the command screen located. ])
	echo "/usr/local/bin/screen"
elif test -x /bin/screen; then
	AC_DEFINE(SCREEN_BINARY,"/bin/screen",[ Where is the command screen located. ])
	echo "/bin/screen"
else
	echo "not found."
	exit 1;
fi

# Check if `xsltproc' install on your system
echo -n "checking for xsltproc... "
if test -x /usr/bin/xsltproc ; then
	XSLTPROC="/usr/bin/xsltproc"
	echo $XSLTPROC
elif test -x /usr/local/bin/xsltproc; then
	XSLTPROC="/usr/local/bin/xsltproc"
	echo $XSLTPROC
elif test -x /bin/xsltproc; then
	XSLTPROC="/bin/xsltproc"
	echo $XSLTPROC
else
	XSLTPROC="/bin/true"
	echo "not found."
fi
AC_SUBST(XSLTPROC)

# Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([memset strchr strdup strerror])

AC_CONFIG_FILES([
Makefile
man/Makefile
src/Makefile
])
AC_OUTPUT
